content/docs/v1.3/configuration/triggers/ifttt/index.mdx
---
title: "Ifttt"
description: "The ifttt trigger lets you send container update notifications to Ifttt via the Maker Webhook applet."
---

import { Callout } from 'fumadocs-ui/components/callout';
import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/triggers/ifttt/ifttt.png)

The `ifttt` trigger lets you send container update notifications to Ifttt via the [Maker Webhook applet](https://ifttt.com/maker_webhooks/).

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_TRIGGER_IFTTT_{trigger_name}_KEY` | 🔴 | The Webhook key | | |
| `DD_TRIGGER_IFTTT_{trigger_name}_EVENT` | ⚪ | The event name | | `drydock-image`. |

<Callout type="info">This trigger also supports the [common configuration variables](/docs/configuration/triggers/#common-trigger-configuration).</Callout>

## Ifttt ingredients

On Webhook call, Ifttt captures the following ingredients:

- eventName
- occuredAt
- value1 (the image which can be updated)
- value2 (the new version)
- value3 (the image notification JSON message)

## Examples

### Configuration

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ...
    environment:
      - DD_TRIGGER_IFTTT_PROD_KEY=*******************************************
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e DD_TRIGGER_IFTTT_PROD_KEY="*******************************************" \
  ...
  codeswhat/drydock
```
</Tab>
</Tabs>

### Ifttt captured ingredients

- EventName: `drydock-container`
- OccuredAt: `August 30, 2019 at 06:51PM`
- Value1: `homeassistant`
- Value2: `2021.6.5`
- Value3: `{"id":"31a61a8305ef1fc9a71fa4f20a68d7ec88b28e32303bbc4a5f192e851165b816","name":"homeassistant","watcher":"local","includeTags":"^\\d+\\.\\d+.\\d+$","image":{"id":"sha256:d4a6fafb7d4da37495e5c9be3242590be24a87d7edcc4f79761098889c54fca6","registry":{"url":"123456789.dkr.ecr.eu-west-1.amazonaws.com"},"name":"test","tag":{"value":"2021.6.4","semver":true},"digest":{"watch":false,"repo":"sha256:ca0edc3fb0b4647963629bdfccbb3ccfa352184b45a9b4145832000c2878dd72"},"architecture":"amd64","os":"linux","created":"2021-06-12T05:33:38.440Z"},"result":{"tag":"2021.6.5"},"updateAvailable":true}`

## How to find the IFTTT key

### Open the Webhook channel & Connect

[Open IFTTT Webhooks](https://ifttt.com/maker_webhooks)

And click on `Connect`
![image](/docs/assets/configuration/triggers/ifttt/ifttt_connect.jpg)

### Get the key from the settings

[Open IFTTT Webhooks Settings](https://ifttt.com/maker_webhooks/settings)

And copy the key from the URL
![image](/docs/assets/configuration/triggers/ifttt/ifttt_key.png)

## How to create an IFTTT receipt

### Create a new receipt & add a "this" trigger

[Click here to create a new receipt](https://ifttt.com/create)

![image](/docs/assets/configuration/triggers/ifttt/ifttt_add_this.png)

### Add the Webhook service

![image](/docs/assets/configuration/triggers/ifttt/ifttt_search_webhook.png)

### Select the 'Receive a web request' trigger

![image](/docs/assets/configuration/triggers/ifttt/ifttt_request_trigger.png)

### Enter the trigger event name (drydock-container by default)

![image](/docs/assets/configuration/triggers/ifttt/ifttt_event.png)

### Define the 'then that' action

![image](/docs/assets/configuration/triggers/ifttt/ifttt_then_that.png)

It's up to you :) Send an email...
